--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,18 @@ wheels/
 
 # Virtual environments
 .venv
+# Node.js
+frontend/node_modules/
+frontend/.next/
+frontend/out/
+
+# Python
+backend/__pycache__/
+ai_engine/__pycache__/
+venv/
+.env
+
+# AI Models & Data
+*.pt
+*.onnx
+uploaded_videos/
